--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.bingoogolapple.bgamenu.demo" >
+    package="cn.bingoogolapple.bgamenu.demo">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
+        android:label="@string/app_name">
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
