--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@
 ANDROID_BUILD_MIN_SDK_VERSION=8
 ANDROID_BUILD_TARGET_SDK_VERSION=21
 ANDROID_BUILD_SDK_VERSION=21
-ANDROID_BUILD_TOOLS_VERSION=21
+ANDROID_BUILD_TOOLS_VERSION=21.0.1
