--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:theme="@style/BGA.Theme"
         android:label="@string/app_name">
         <activity
             android:name=".ui.activity.MainActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:theme="@style/BGA.Theme.Translucent"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
