--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -16,8 +16,9 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'cn.bingoogolapple:bga-annotation:1.0.0@aar'
-    compile project(':library')
-//    compile 'cn.bingoogolapple:bga-menu:1.0.0@aar'
+//    compile project(':library')
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'cn.bingoogolapple:bga-menu:1.0.0@aar'
 }
 
 
